# sound-system

./: CMakeLists.txt  Makefile  README.md  client.json  common.h  config.c  config.h  config.json  logger.c  logger.h  main.c  server.c  server.h  server.json
src/client/: client.h  main.c
src/include/logger/: common.h  logger.h
src/logger/: logger.c
src/server/: config.h  main.c  server.c
